--- a/hmwrk_4/styles.css
+++ b/hmwrk_4/styles.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
     box-sizing: border-box;
-    font-family: "Ariel", sans-serif ;
+    font-family: "Poppins", "Ariel", sans-serif ;
   }
 body{
     margin: auto 0;
@@ -20,12 +21,15 @@ p,a, li{
 }
 
 img{
-    width: 200px;
-    height: 300px;
+    height: minmax(auto, 200px);
+    width: 100%;
+    border-radius: 33px;
 }
 
 .product-card{
-    border: 2px solid magenta;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 10px;
+    border-radius: 33px;
 }
 
 nav>ul{
@@ -58,24 +62,24 @@ nav>ul{
     }
     .col-1{
         grid-column: 1fr;
-        border: 2px solid red;
+        /* border: 2px solid red; */
         padding: 2em;
 
     }
 
     .col-2{
         grid-column: span 2;
-        border: 2px solid blue;
+        /* border: 2px solid blue; */
         display: flex;
         flex-direction: row;
         padding: 2em;
         height: max-content;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 
     .col-3{
         grid-column: span 3;
-        border: 2px solid green;
+        /* border: 2px solid green; */
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -83,7 +87,7 @@ nav>ul{
     }
     .col-4{
         grid-column: span 4;
-        border: 2px solid green;
+        /* border: 2px solid green; */
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
