adds product details and header animations

--- a/hmwrk_4/styles.css
+++ b/hmwrk_4/styles.css
@@ -1,38 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-
-@keyframes product-card-load {
-    0%{
-        opacity: 0;
-    }
-
-    100%{
-        opacity: 1;
-    }
-}
-
-
-@keyframes header-load{
-    0%{
-        transform: translateY(-100%);
-    }
-
-    100%{
-        transform: translateY(0%);
-    }
-}
-
-
+*,
+ *::after,
+ *::before{
+    --header-load-time: 300ms;
+ }
 
 
 html {
     box-sizing: border-box;
     font-family: "Poppins", "Ariel", sans-serif ;
   }
+
 body{
     margin: auto 0;
 }
+
+
+
 
 p,a, li{
     font-size: 1.25rem;
@@ -59,8 +45,14 @@ img{
     max-height: 300px;
 }
 
+
+
 .product-card{
-    animation: product-card-load 400ms ease-in;
+    animation-name: product-card-load;
+    animation-duration: 600ms;
+    animation-timing-function: ease-in;
+    /* animation-delay: var(--header-load-time); */
+    animation-fill-mode: forwards;
 }
 .product-card:hover{
     cursor: pointer;
@@ -79,7 +71,8 @@ ul{
     display: flex;
     place-items: center;
     flex-direction: column;
-    animation: header-load 300ms ease-in;
+    animation: header-load var(--header-load-time) ease-in;
+    border-bottom: 2px solid rgba(125, 125, 125, 0.35);
 }
 
 
@@ -152,4 +145,33 @@ ul{
         grid-column:unset;
     }
 
+}
+
+/* Animations */
+
+@keyframes product-card-load {
+    0%{
+        scale: 0;
+    }
+
+
+    90%{
+        scale: 1.1;
+    }
+
+    100%{
+        scale: 1;
+        opacity: 1;
+    }
+}
+
+
+@keyframes header-load{
+    0%{
+        transform: translateY(-100%);
+    }
+
+    100%{
+        transform: translateY(0%);
+    }
 }
