--- a/hmwrk_4/styles.css
+++ b/hmwrk_4/styles.css
@@ -94,14 +94,6 @@ img{
     cursor: pointer;
 }
 
-nav>ul{
-    list-style: none;
-}
-
-ul{
-    display: flex;
-    gap: 5em;
-}
 
 #site-banner{
     display: flex;
@@ -109,6 +101,18 @@ ul{
     flex-direction: column;
     animation: header-load var(--header-load-time) ease-in;
     border-bottom: 2px solid rgba(125, 125, 125, 0.35);
+
+}
+
+.site-nav{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+    list-style: none;
+}
+
+#site-footer{
+    
 }
 
 
@@ -116,6 +120,9 @@ ul{
 @media only screen and (min-width: 480px) {
     nav>ul>li{
         display: inline;
+    }
+    .site-nav{
+        flex-direction: row;
     }
 
     .grid-wrapper{
@@ -126,6 +133,9 @@ ul{
     #A, #B, .col-tab, .col-3, .col-4{
         grid-column: span 2;
     }
+    #site-banner{
+        flex-direction: row;
+    }
 
 }
 
@@ -134,7 +144,17 @@ ul{
     .grid-wrapper{
         grid-template-columns: repeat(4, 1fr);
         max-width: 1920px; 
-        margin: auto;
+        margin:auto;
+    }
+
+    #site-banner{
+        max-width: 1920px; 
+        margin:1em auto;
+    }
+
+    #site-footer{
+        max-width: 1920px; 
+        margin:1em auto;
     }
     .col-1{
         grid-column: 1fr;
