--- a/hmwrk_4/product.css
+++ b/hmwrk_4/product.css
@@ -1,3 +1,21 @@
+@property --gradient-angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+*,
+*::after,
+*::before {
+    --header-load-time: 300ms;
+    --clr-1: #000;
+    --clr-2: #333;
+    --clr-3: #666;
+    --clr-4: #999;
+    --clr-5: #ccc;
+}
+
+
 .product-card{
     animation-name: product-card-load;
     animation-duration: 600ms;
@@ -30,4 +48,20 @@
 
 .product-card::after{
     filter:blur(3.5rem)
+}
+
+@keyframes product-card-load {
+    0% {
+        scale: 0;
+    }
+
+
+    90% {
+        scale: 1.1;
+    }
+
+    100% {
+        scale: 1;
+        opacity: 1;
+    }
 }
