--- a/hmwrk_4/styles.css
+++ b/hmwrk_4/styles.css
@@ -2,23 +2,6 @@
 @import url("/product.css");
 
 
-@property --gradient-angle {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-}
-
-*,
-*::after,
-*::before {
-    --header-load-time: 300ms;
-    --clr-1: #000;
-    --clr-2: #333;
-    --clr-3: #666;
-    --clr-4: #999;
-    --clr-5: #ccc;
-}
-
 
 html {
     box-sizing: border-box;
@@ -50,6 +33,13 @@ a:visited {
     border-radius: 33px;
     position: relative;
 }
+
+[class*="col-"]:hover{
+    box-shadow: 
+        inset 0 -3em 3em rgba(0, 0, 0, 0.2), 
+        0.3em 0.5em 1em rgba(0, 0, 0, 0.5);
+}
+
 
 
 img {
@@ -147,7 +137,7 @@ img {
 
 
 /* desktop styling -- apply these styles from 480 onwards */
-@media only screen and (min-width:820px) {
+@media only screen and (min-width:1081px) {
     .grid-wrapper {
         grid-template-columns: repeat(4, 1fr);
         max-width: 1920px;
@@ -216,7 +206,7 @@ img {
 
 }
 
-@media only screen and (min-width:1920px) {
+@media only screen and (min-width:1921px) {
     #site-banner,
     .grid-wrapper,
     #site-footer {
@@ -226,21 +216,6 @@ img {
 
 /* Animations */
 
-@keyframes product-card-load {
-    0% {
-        scale: 0;
-    }
-
-
-    90% {
-        scale: 1.1;
-    }
-
-    100% {
-        scale: 1;
-        opacity: 1;
-    }
-}
 
 
 @keyframes header-load {
