--- a/hmwrk_4/styles.css
+++ b/hmwrk_4/styles.css
@@ -32,7 +32,7 @@ a:visited {
     padding: 10px;
     border-radius: 33px;
     position: relative;
-    align-items: center;
+    place-items: center;
     align-content: center;
 }
 
@@ -96,6 +96,7 @@ img {
 .socials{
     display: flex;
     gap: 1em;
+    margin-right: 1.5em;
 }
 
 .social-link{
@@ -135,7 +136,6 @@ img {
     #A,
     #B,
     #E,
-    #D,
     .col-tab,
     .col-3,
     .col-4,
@@ -143,12 +143,19 @@ img {
         grid-column: span 2;
     }
 
-    .col-2x3 {
+    .col-2x3{
         grid-row: span 2;
+        
     }
 
     #C {
-        order: 1;
+        grid-column: 2;
+        grid-row: 8/9;
+    }
+
+    #D{
+        grid-column: 2;
+        grid-row: 13/14;
     }
 
     #site-footer{
@@ -223,12 +230,15 @@ img {
         grid-column: span 2;
     }
 
-    #A, #D {
+    #A {
         grid-column: initial;
     }
 
-    #C, #D {
-        order: initial;
+
+
+    #C, #D{
+        grid-row: initial;
+        grid-column: initial;
     }
 
     .col-tab {
@@ -237,6 +247,7 @@ img {
 
 }
 
+/* set margins for v-big screens*/
 @media only screen and (min-width:1921px) {
     #site-banner,
     .grid-wrapper,
